syntax = "proto3";
import "com/ribbontek/grpccourse/shopping_cart_models.proto";

package com.ribbontek.grpccourse;

option java_multiple_files = true;
option java_package = "com.ribbontek.grpccourse";

// The Shopping Cart Service
service ShoppingCartService {

  rpc CreateSession(CreateShoppingCartSessionCommand) returns (ShoppingCartSession);

  rpc CancelSession(CancelShoppingCartSessionCommand) returns (ShoppingCartSession);

  rpc AddItemToShoppingCart(AddItemToShoppingCartCommand) returns (ShoppingCartSession);

  rpc RemoveItemFromShoppingCart(RemoveItemFromCartCommand) returns (ShoppingCartSession);
}

